fix: supporters logo overlap

--- a/src/style/components/Partner.css
+++ b/src/style/components/Partner.css
@@ -97,7 +97,7 @@
 
 @media screen and (max-width: 500px) {
    .partnerImage {
-       height: 40px;
+       height: fit-content;
    }
 }
 
